[package]
name          = "btsg-wavs"
description   = "A custom authentication contract verifying BLS12-381 signature aggregations, used by WAVS operators."
authors       = [""]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmos-sdk-proto   = { workspace = true, default-features = false }
cw-storage-plus    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-ownable         = { workspace = true }
cw-orch            = { workspace = true }
cw-utils           = { workspace = true }
cw2                = { workspace = true }

 
btsg-auth = { workspace = true }


schemars           = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }


[dev-dependencies]
prost = "0.11.9"
cw-multi-test = {version = "2.2.0",features = ["stargate", "cosmwasm_2_1"]}
derivative = "2.2"
anyhow = "1"